Complete CONTRIBUTIONS.md - Member C